
copy("main_executable") {
  sources = [ "$root_out_dir/main.exe" ]
  outputs = [ "$root_out_dir/bin/{{source_file_part}}" ]
  deps = [
    ":main"
  ]
}

executable("main") {
  sources = [
    "src/main.c",
    target_gen_dir + "/src/hello.c",
  ]

  deps = [
    ":gen_hello_source",
    "//hello:hello_shared",
  ]
  output_extension = "exe"
  libs = [ "-lhello_shared", "-L." ]
  print(target_out_dir)
}

action_foreach("gen_hello_source") {
  script = "//build/script/gcc_precompile.py"
  sources = [ "src/hello.template" ]
  outputs = [
    "{{source_gen_dir}}/{{source_name_part}}.c"
  ]

  args = [ 
    "-o", 
    outputs[0],    
    "{{source}}", 
  ]
}
