
copy("main_executable") {
  sources = [ "$root_out_dir/main.exe" ]
  outputs = [ "$root_out_dir/bin/{{source_file_part}}" ]
  deps = [
    ":main"
  ]
}

config("main_config") {
  cflags = [ "-g",  "-std=gnu99" ]
}

executable("main") {
  sources = [
    "src/main.c",
    target_gen_dir + "/src/hello.c",
  ]

  all_dependent_configs = [ 
    ":main_config",
  ]

  deps = [
    ":gen_hello_source",
    "//hello:hello_shared",
  ]

  output_extension = "exe"
}

action_foreach("gen_hello_source") {
  script = "//build/script/gcc_precompile.py"
  sources = [ "src/hello.template" ]
  outputs = [
    "{{source_gen_dir}}/{{source_name_part}}.c"
  ]

  args = [ 
    "-o", 
    outputs[0],    
    "{{source}}", 
  ]
}
