
import("//build/tool/android.gni")
import("//build/android/internal_rules.gni")

copy("main_executable") {
  sources = [ "$root_out_dir/main.exe" ]
  outputs = [ "$root_out_dir/bin/{{source_file_part}}" ]
  deps = [
    ":main"
  ]
}

config("main_config") {
  cflags = [ "-g",  "-std=gnu99" ]
}

action_foreach("gen_hello_source") {
  script = "//build/script/gcc_precompile.py"
  sources = [ "src/hello.template" ]
  outputs = [
    "$target_gen_dir/{{source_name_part}}.c"
  ]

  args = [ 
    "-o", 
    rebase_path(outputs[0], root_build_dir),    
    "{{source}}", 
  ]
}

executable("main") {
  sources = [
    "src/main.h",
    "src/main.c",
  ] + get_target_outputs(":gen_hello_source")

  all_dependent_configs = [ 
    ":main_config",
  ]

  deps = [
    ":gen_hello_source",
    "//hello:hello_shared",
    "//android/public/shell:shell_apk",
  ]

  output_extension = "exe"
}

mingw_toolchain("mingw_toolchain_i386") {
  mingw_root = "D:/share/MinGW"
}

group("test_group") {
  deps = [
    "//hello:hello_static(:mingw_toolchain_i386)",
    ":test_write_build_config",
  ]
}

write_build_config("test_write_build_config") {
  type = "android_apk_test"
  build_config = "$target_out_dir/$target_name.build_config"
}
