
executable("main") {
  sources = [
    "config.h",
    "kdebug.h",
    "list.c",
    "list.h",
    "log.c",
    "log.h",
    "macros.h",
    "macros.c",
    "main.c",
    "string_ext.c",
    "string_ext.h",
    "util.c",
    "util.h",
    "chapter1/chapter1.c",
    "chapter2/chapter2.c",
    "chapter5/chapter5.c",
    "chapter12/chapter12.c",
    "chapter13/chapter13.c",
  ]
  include_dirs = ["."]
  cflags = [ "-std=gnu99", "-g", "-Werror=return-type" ]
}
