
all_source_file = exec_script("//build/find_all_files_under.py",
                              [
                                "--include-patterns",
                                "*",
                                "--dir",
                                rebase_path(".", root_build_dir),
                                "--relative-dir",
                                rebase_path(".", root_build_dir),
                              ],
                              "list lines")

executable("main") {
  sources = all_source_file

  cflags_c = [
    "-Wall",
    "-m32",
    "-Werror",
    "-Wno-unused-value",
    "-Wno-unused-variable",
    "-O3",
    "-fno-strict-aliasing",
    "-Wno-unused-function",
    "-Wno-format-security",
  ]
  include_dirs = [
    ".",
  ]
  libs = [
    "pthread",
  ]
  defines = [
    "NULL=0",
  ]

  if (target_os == "win") {
    output_extension = "exe"
  }
  ldflags = [
    "-m32",
    "-Wl,-no_pie"
  ]
}
