import("//test/config/android/internal_rules_extra.gni")

target("java_library_extra", "download_jar") {
}

target("java_library_extra", "main_jar") {
  possible_config_deps = [
    ":download_jar",
  ]
}

target("android_apk_extra", "main") {
  apk_project_name = "MainButton"
  release_name = "release"

  possible_config_deps = [
    ":main_jar",
    ":download_jar",
  ]
  deps = [
    ":main_jar",
  ]
}

group("all") {
  deps = [
    ":main",
  ]
} 
