# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("hello") {
  sources = [
    "hello.c",
  ]

  deps = [
    "hello_shared:hello_shared",
    "hello_static:hello_static",
    "print_hello:print_hello",
  ]
}


