import("//build/config/android/rules.gni")


write_build_config("read_mode_java__build_config") {
  type = "java_library"
  build_config = "$target_gen_dir/read_mode_java.build_config"

  jar_path = "$target_out_dir/read_mode_java.jar"
}

java_prebuilt("guava_java") {
  jar_path = "guava-14.0.1.jar"
}

group("chromium_java") {
  deps = [
    ":read_mode_java__build_config",
    ":guava_java",
  ]
}
