import("//build/config/android/rules.gni")

java_prebuilt("guava_java") {
  jar_path = "guava-14.0.1.jar"
}

# generate the binary *.jar
java_binary("chrome_binary") {
  java_files = [
    "src/com/oppo/main/Main.java",
  ]

  main_class = "com.oppo.main.Main"
  
  deps = [
    ":guava_java",
  ]
}

group("chromium_java") {
  deps = [
    ":chrome_binary",
  ]
}
