
import ("//build/config/mingw/shared_lib.gni")

shared_lib("hello_shared") {
  sources = [
    "hello_shared.c",
    "hello_shared.h",
  ]

  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
  shlib_ext = ".dll"

  shared_lib_dependent_configs = [
    ":hello_shared_config",
  ]
}

config("hello_shared_config") {
  include_dirs = [
    "."
  ]
  libs = [
    "hello_shared",
  ]
  lib_dirs = [
    "$root_build_dir",
  ]
}
