import ("//build/config/mingw/shared_lib.gni")
 
shared_lib("print_hello") {
  sources = [
    "print_hello.cpp",
    "print_hello.h",
  ]

  libs = [ "stdc++" ]
  defines = [ "PRINT_HELLO_IMPLEMENTATION" ]
  shared_lib_dependent_configs = [ ":print_hello_config" ]
  shlib_ext = ".dll"
}

config("print_hello_config") {
  include_dirs = [ "." ]
  libs = [ "print_hello" ]
  lib_dirs = [ "$root_out_dir" ]
}
