import("//build/config/android/config.gni")
import("//build/config/android/internal_rules.gni")
import("//build/config/android/rules.gni")

# 便于java库
java_library("print_java") {
  java_files = [
    "src/com/oppo/main/Main.java",
  ]
  srcjars = [
    "guava-14.0.1.jar"
  ]
  classpath = []
  requires_android=false
  supports_android=false
}
